parsing 4.2 (sync)
